# RanLip

./: README  README.md  example1.m  makefile
C/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh  ranlip.info  ranlip.texinfo  ranlipinstall  ranlipuninstall  texinfo.tex
C/docs/: ranlip.ps
C/examples/: makefile  ranliptest.cpp  ranliptestproc.cpp
C/src/: Makefile.am  Makefile.in  ranlip.cpp  ranlip.h  ranlipproc.cpp  ranlipproc.h
makefiles/: makefile  makefile.linux
matlab/: MyDist.m  MyDist1.m  MyDist2.m  example1.m  example2.m  example3.m  ranlip.mexw64  readme.txt
matlab/src/: cp.bat  discrete.c  lk.bat  ranlip.c  ranlip.h  ranlip1.cpp
src/: gsl_randist.h  gsl_randistdll.h  mwrap_ranlip.c  ranlipdist.h  ranlipdll.h  ranlipproc.cpp  ranlipproc.h
