lib_LTLIBRARIES = libranlip.la
libranlip_la_SOURCES = discrete.c ranlip.cpp ranlip.h ranlipdist.h ranlipproc.cpp ranlipproc.h
libranlip_la_LDFLAGS = -version-info 1:0:0

libranlip_la_CXXFLAGS =  -Wno-deprecated
libranlip_la_LIBADD= -lm
libranlip_la_CC = g++

nobase_include_HEADERS = ranlip.h ranlipdist.h ranlipproc.h
